添加了AI执黑，优化了决策策略

--- a/wuziqi/index.html
+++ b/wuziqi/index.html
@@ -23,7 +23,10 @@
 		<!-- <a href="" class="button">返回在线版</a> -->
 		<a href="javascript:;" class="button">单机模式</a>
 	</div>
-	<div class="right"><a href="javascript:window.location.reload();" class="button">重玩</a></div>
+	<div class="right">
+		<a href="javascript:ai_play('black');" class="button">AI执黑</a>
+		<a href="javascript:window.location.reload();" class="button">重玩</a>
+	</div>
 	<div class="title">在线五子棋</div>
 </div>
 
