--- a/wuziqi/index.html
+++ b/wuziqi/index.html
@@ -2,18 +2,16 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="keywords" content="休闲 娱乐 游戏 在线小游戏 五子棋 在线五子棋">
 <meta name="description" content="老少皆宜的休闲小游戏">
 <meta name="author" content="庆新">
 <meta name="copyright" content="朱庆新">
 <title>在线五子棋</title>
+<link rel="stylesheet" type="text/css" href="../_common/custome/css/modal_style.css">
 <link rel="stylesheet" type="text/css" href="style/main/css/index.css">
-<style type="text/css">
-#board-container {position:absolute;left: 0;top: 50px;bottom: 0;width:100%;}
-#board {display: block;position: relative;background: url(style/main/images/_cbbg.jpg);margin: auto;max-width: 100%;max-height: 100%;}
-</style>
 <script type="text/javascript" src="../_common/jquery/jquery-2.2.4.min.js"></script>
-<!-- <script type="text/javascript" src="../_common/tcpcall/tcpcall.js"></script> -->
+<script type="text/javascript" src="../_common/custome/js/jquery.modal.js"></script>
 <script type="text/javascript" src="style/main/js/index.js"></script>
 </head>
 <body>
@@ -24,14 +22,20 @@
 		<a href="javascript:;" class="button">单机模式</a>
 	</div>
 	<div class="right">
-		<a href="javascript:ai_play('black');" class="button">AI执黑</a>
-		<a href="javascript:window.location.reload();" class="button">重玩</a>
+		<a href="javascript:ai_first();" class="button">AI执黑</a>
+		<a href="javascript:replay();" class="button">重新开始</a>
 	</div>
 	<div class="title">在线五子棋</div>
 </div>
 
-<div id="board-container">
-	<embed id="board" src="style/main/images/canvas.svg" type="image/svg+xml">
+<div class="chessboard" id="chessboard"></div>
+
+<div style="text-align:center;margin:50px 0;display: none;" id="footboard">
+	<div style="max-width: 900px;margin: auto;padding: 20px 0;background: rgba(255,255,255,0.7);">
+		<div style="font-weight:bold;font-size:16px">第 <span id="play_time" style="color:#FFAA00;">1</span> 局</div><br>
+		<div style="font-size:14px;">胜：<span id="vict_time" style="color:#1CA261;font-weight:bold;">0</span></div>
+		<div style="font-size:14px;">败：<span id="fail_time" style="color:#DD4F43;font-weight:bold;">0</span></div>
+	</div>
 </div>
 
 </body>
